<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blueMenu"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewNew"
        style="@style/MenuTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_news"
        tools:text="News" />

    <include layout="@layout/separator" />

    <TextView
        android:id="@+id/textViewScores"
        style="@style/MenuTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_scores"
        tools:text="Scores" />

    <include layout="@layout/separator" />

    <TextView
        android:id="@+id/textViewStandings"
        style="@style/MenuTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_standings"
        tools:text="Standings" />

</LinearLayout>